--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,24 +4,39 @@
 
 html {
   @apply text-gray-900;
-  @apply bg-gray-50;
+  @apply bg-orange-50;
+  @apply bg-gradient-to-b from-orange-50 to-white;
   scroll-behavior: smooth;
+  transition: all 0.5s linear;
+  scrollbar-width: 10px;
+  scrollbar-color: linear-gradient(to bottom, transparent, var(--scrollbar-color));
+  --bg-gradient: linear-gradient(to bottom, rgb(255, 248, 241), white);
   --scrollbar-color: rgba(11, 150, 155, 0.9);
-  transition: all 0.3s linear;
-}
-
-::-webkit-scrollbar {
-  width: 0.75rem;
-}
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(to bottom, transparent, var(--scrollbar-color));
-  border-radius: 6px;
 }
 
 html.dark {
-  @apply text-gray-50;
+  @apply text-gray-200;
   @apply bg-gray-900;
+  @apply bg-gradient-to-b from-black to-gray-900;
+  --bg-gradient: linear-gradient(to bottom, rgb(0, 0, 0), #111827);
   --scrollbar-color: rgba(200, 250, 255, 0.9);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-button {
+  display: none;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--bg-gradient);
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, transparent, var(--scrollbar-color));
+  border-radius: 4px;
 }
 
 @layer base {
