--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,10 +8,10 @@
   @apply bg-gradient-to-b from-orange-50 to-white;
   scroll-behavior: smooth;
   transition: all 0.5s linear;
-  scrollbar-width: 10px;
-  scrollbar-color: linear-gradient(to bottom, transparent, var(--scrollbar-color));
+  scrollbar-width: 8px;
+  scrollbar-color: var(--scrollbar-color);
   --bg-gradient: linear-gradient(to bottom, #fff8f1, white);
-  --scrollbar-color: rgba(251, 191, 36);
+  --scrollbar-color: rgba(222, 150, 15, 0.9);
 }
 
 .dark:root {
@@ -22,11 +22,16 @@
   --scrollbar-color: rgba(200, 250, 255, 0.9);
 }
 
-::-webkit-scrollbar {
-  width: 10px;
+code {
+  background-color: transparent !important;
 }
 
-body::-webkit-scrollbar-button {
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-button {
   display: none;
 }
 
@@ -35,8 +40,9 @@ body::-webkit-scrollbar-button {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(to bottom, transparent, var(--scrollbar-color));
-  border-radius: 4px;
+  /* background: linear-gradient(to bottom, transparent, var(--scrollbar-color)); */
+  background: var(--scrollbar-color);
+  border-radius: 2px;
 }
 
 @layer base {
