--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,12 +4,12 @@
 
 :root {
   @apply text-[#1F1F1F];
-  @apply bg-[#FAF5E7];
+  @apply bg-[#FAF5D7];
   scroll-behavior: smooth;
   transition: all 0.5s linear;
   scrollbar-width: 6px;
   scrollbar-color: var(--scrollbar-color);
-  --scrollbar-color: rgba(205,178,72, 0.95);
+  --scrollbar-color: rgba(205, 178, 72, 0.95);
 }
 
 .dark:root {
